--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,7 @@
   "name": "astro-massiely",
   "version": "1.0.0",
   "private": false,
-  "homepage": "https://AltRfguerra.github.io/bodaroxul/docs",
+  "homepage": "/bodaroxul/docs",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
