--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build:css": "sass src/styles/sass/main.scss docs/styles/main.css",
+    "build:js": "babel src/scripts --out-dir docs/scripts",
+    "build": "npm run build:css && npm run build:js && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -26,6 +28,15 @@
   "devDependencies": {
     "prettier-plugin-astro": "^0.12.0",
     "rollup": ">=3",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "@babel/cli": "^7.20.0",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0"
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
   }
 }
+
+
+
